Fixed some bugg
1. moved json file into db so main folder is a bit cleaner
2. fixed background image
3. fixed some js code that could have been exploited
4. Fixed order js is imported in index.html and added manifast

--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -18,6 +18,7 @@
       sizes="16x16"
       href="./assets/logo/favicon-16x16.png"
     />
+    <link rel="manifest" href="./assets/logo/site.webmanifest" />
 
     <!-- Google Fonts - Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -118,9 +119,9 @@
 
     <!-- JavaScript -->
     <script src="js/sounds.js"></script>
+    <script src="js/tasks.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/timer.js"></script>
     <script src="js/quotes.js"></script>
-    <script src="js/tasks.js"></script>
   </body>
 </html>
